--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.1",
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.4"
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "babel-plugin-component": "^1.1.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
